[project]
name = "IncSVD"
version = "0.0.1"
authors = [
  { name = "Haoran Deng", email = "denghaoran@zju.edu.cn" },
]
dependencies = ['numpy>=1.19','scikit-learn>=0.23','scipy>=1.5']
description = "Towards Efficient Updating of Truncated Singular Value Decompostion"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/Erikaqvq/ISVD_pypi"
"Bug Tracker" = "https://github.com/Erikaqvq/ISVD_pypi/issues"
